log
Sat 24 Sep 2022 12:08:17 AM UTC: 
 tests:  1|8
total_score: 0/70
5b8dd1a
Mon 26 Sep 2022 12:40:08 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f2923c5
Mon 26 Sep 2022 12:40:24 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:29: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |         return tree->current->pair;
      |                ~~~~~~~~~~~~~^~~~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c0de483
Mon 26 Sep 2022 12:41:07 AM UTC: 
 treemap.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  11|6
total_score: 15/70
567e85a
Mon 26 Sep 2022 12:43:31 AM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
test.c: In function ‘minimum’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
bbb6b1e
Mon 26 Sep 2022 12:44:08 AM UTC: 
 treemap.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
63ea1b8
Mon 26 Sep 2022 12:47:08 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
test.c: In function ‘minimum’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5e7cea8
Mon 26 Sep 2022 01:11:27 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
test.c: In function ‘minimum’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
d500b8c
Mon 26 Sep 2022 01:41:20 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|4
total_score: 20/70
30d0a57
Mon 26 Sep 2022 01:51:51 AM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  0|0
b94dc1c
Mon 26 Sep 2022 01:52:25 AM UTC: 
 treemap.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:49:9: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   49 |  return NULL;
      |         ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c: At top level:
treemap.c:52:35: error: ‘key’ undeclared here (not in a function)
   52 |   TreeNode * new = createTreeNode(key,value);
      |                                   ^~~
treemap.c:52:39: error: ‘value’ undeclared here (not in a function)
   52 |   TreeNode * new = createTreeNode(key,value);
      |                                       ^~~~~
treemap.c:53:3: error: expected identifier or ‘(’ before ‘if’
   53 |   if(tree->current==NULL)
      |   ^~
treemap.c:55:5: error: expected identifier or ‘(’ before ‘else’
   55 |     else{
      |     ^~~~
treemap.c:64:1: error: expected identifier or ‘(’ before ‘}’ token
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2f3280b
Mon 26 Sep 2022 01:52:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:52:35: error: ‘key’ undeclared here (not in a function)
   52 |   TreeNode * new = createTreeNode(key,value);
      |                                   ^~~
treemap.c:52:39: error: ‘value’ undeclared here (not in a function)
   52 |   TreeNode * new = createTreeNode(key,value);
      |                                       ^~~~~
treemap.c:53:3: error: expected identifier or ‘(’ before ‘if’
   53 |   if(tree->current==NULL)
      |   ^~
treemap.c:55:5: error: expected identifier or ‘(’ before ‘else’
   55 |     else{
      |     ^~~~
treemap.c:64:1: error: expected identifier or ‘(’ before ‘}’ token
   64 | }
      | ^
Compilation failed
69aa2ba
Mon 26 Sep 2022 01:53:09 AM UTC: 
 treemap.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   54 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8d6bde6
Mon 26 Sep 2022 01:53:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 20/70
d13fbfc
Mon 26 Sep 2022 01:54:21 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
treemap.c:86:1: error: expected identifier or ‘(’ before ‘}’ token
   86 | }
      | ^
Compilation failed
61a8502
Mon 26 Sep 2022 01:54:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
731d8b4
Mon 26 Sep 2022 01:56:34 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:68:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   68 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c: At top level:
treemap.c:71:35: error: ‘key’ undeclared here (not in a function)
   71 |   TreeNode * new = createTreeNode(key,value);
      |                                   ^~~
treemap.c:71:39: error: ‘value’ undeclared here (not in a function)
   71 |   TreeNode * new = createTreeNode(key,value);
      |                                       ^~~~~
treemap.c:72:3: error: expected identifier or ‘(’ before ‘if’
   72 |   if(tree->current==NULL)
      |   ^~
treemap.c:74:5: error: expected identifier or ‘(’ before ‘else’
   74 |     else{
      |     ^~~~
treemap.c:81:3: error: expected identifier or ‘(’ before ‘}’ token
   81 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
4cea763
Mon 26 Sep 2022 01:57:01 AM UTC: 
 treemap.c | 29 -----------------------------
 1 file changed, 29 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
13b79ab
